# ai_travel_assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
backend/: app.py  pyproject.toml
backend/api/: schemas.py  security.py  settings.py  tasks.py  travel_api.py
backend/api/routers/: auth.py  trips.py  users.py
backend/api/storage/: __init__.py  base.py  json_store.py  sql_store.py
backend/src/ai_travel_assistant/: config.py  crew.py  flight_flow.py  hotel_flow.py
backend/src/ai_travel_assistant/config/: tasks.yaml
backend/src/ai_travel_assistant/tools/: google_flights.py  google_hotels.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/lib/: api.ts  auth.ts  env.ts  types.ts
frontend/src/: App.tsx  format.ts  index.css  main.tsx
frontend/src/components/: FeedbackForm.tsx  Layout.tsx  PipeTable.tsx  ProtectedRoute.tsx  RequestSummary.tsx  TripResult.tsx
frontend/src/hooks/: useMe.ts  useTrips.ts
frontend/src/pages/: CreateTripPage.tsx  LoginPage.tsx  RegisterPage.tsx  TripDetailPage.tsx  TripsPage.tsx
src/ai_travel_assistant/: crew.py  flight_flow.py  flight_results.py  main.py
src/ai_travel_assistant/api/: schemas.py  security.py  settings.py  tasks.py  travel_api.py
src/ai_travel_assistant/api/routers/: auth.py  trips.py  users.py
src/ai_travel_assistant/api/storage/: __init__.py  base.py  json_store.py  sql_store.py
src/ai_travel_assistant/config/: agents.yaml  tasks.yaml
src/ai_travel_assistant/tools/: custom_tool.py  google_flights.py
