[project]
name = "ai_travel_assistant"
version = "0.1.0"
description = "AI-travel-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.13.0",
    "email-validator>=2.3.0",
    "fastapi>=0.137.0",
    "google-search-results>=2.4.2",
    "pwdlib[bcrypt]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.28",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
ai_travel_assistant = "ai_travel_assistant.main:run"
run_crew = "ai_travel_assistant.main:run"
train = "ai_travel_assistant.main:train"
replay = "ai_travel_assistant.main:replay"
test = "ai_travel_assistant.main:test"
run_with_trigger = "ai_travel_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
